pushing UI updates

--- a/src/index.css
+++ b/src/index.css
@@ -379,7 +379,7 @@ body {
   }
   .listingCard {
     flex: 100%;
-    margin: 40px 0;
+    margin: 40px 2px;
   }
   .listingImg {
     width: 400px;
